crates/biome_html_parser/tests/html_specs/ok/vue/v-for/simple.vue
<div v-for="item in items">{{ item }}</div>
<div v-for="item of items">{{ item }}</div>
<div v-for="n in 10">{{ n }}</div>
