crates/biome_html_parser/tests/html_specs/error/vue/v-for/unterminated.vue
<div v-for="item in items>{{ item }}</div>
